--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"/>
+    <link rel="stylesheet" href="index.css">
 
-    <title>Projet Fil Rouge : demo</title>
+    <title>RED APP</title>
   </head>
   <body>
     <div id="root"></div>
