--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="stylesheet" href="index.css">
 
-    <title>RED APP</title>
+    <title>Koro</title>
   </head>
   <body>
     <div id="root"></div>
